fixed icons so translate doesn't break them made google translate box a bit nicer

--- a/css/styles_main.css
+++ b/css/styles_main.css
@@ -95,6 +95,17 @@ select {
     color:white;
 }
 
+.goog-te-gadget-icon{
+    float:left !important;
+    display:none !important;
+}
+
+.goog-te-gadget-simple{
+    width:100% !important;
+    border:none !important;
+    background-color:transparent !important;
+}
+
 /* Media queries */
 @media (min-width: 992px) {
   #central {
